v_utils_macros/tests/compile_fail/private_value_with_inline_default.stderr
error: proc-macro derive panicked
 --> $DIR/v_utils_macros/tests/compile_fail/private_value_with_inline_default.rs:7:33
  |
7 | #[derive(Clone, Debug, Default, MyConfigPrimitives)]
  |                                 ^^^^^^^^^^^^^^^^^^
  |
  = help: message: field `port`: `#[private_value]` is incompatible with the nightly `field: T = expr` default-field-value syntax. Private values are resolved at deserialization from string / `{ env = "..." }`; supply the default through the environment instead.

error: aborting due to 1 previous error

